// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`replicate with react fiber > SVG path aliasing > should initially write file with replaced SVG path, and then rewrite file with aliased path 1`] = `
"export function App() {
  return (
    <svg>
      <path d="[[SVG:0|PATH:0|NAME:N|DESCRIPTION:D]]" />
    </svg>
  );
}
"
`;

exports[`replicate with react fiber > SVG path aliasing > should initially write file with replaced SVG path, and then rewrite file with aliased path 2`] = `
"export function App() {
  return (
    <svg>
      <path d="replace me" />
    </svg>
  );
}
"
`;

exports[`replicate with react fiber > naming > LLM > createRef > should be correct for component without deps 1`] = `
"import { Comp } from "@/components/Comp";
export function Sample() {
  return <Comp />;
}
"
`;

exports[`replicate with react fiber > naming > LLM > createRef > should contain child component 1`] = `
"import { Child } from "@/components/Child";
export function Sample() {
  return <Child />;
}
"
`;

exports[`replicate with react fiber > naming > LLM > createRef > should contain child component 2`] = `
"import { Parent } from "@/components/Parent";
import { Child } from "@/components/Child";
export function Sample() {
  return (
    <Parent>
      <Child />
    </Parent>
  );
}
"
`;

exports[`replicate with react fiber > naming > LLM > should not replace refs to components that do not have code yet 1`] = `
[
  {
    "children": [],
    "properties": {
      "deps": "["C1"]",
      "jsx": "<Parent>{"child"}</Parent>;
",
    },
    "tagName": "ref",
    "type": "element",
  },
  {
    "children": [],
    "properties": {
      "deps": "["C1"]",
      "jsx": "<Parent><span>{"deeper"}</span></Parent>;
",
    },
    "tagName": "ref",
    "type": "element",
  },
]
`;

exports[`replicate with react fiber > naming > default name > should TitleCase component name 1`] = `
"export function ComponentName() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > default name > should put component with . in the name in a directory 1`] = `
"export function Div() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > default name > should support multiple components with same name 1`] = `
"export function Dupe1() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > default name > should support multiple components with same name 2`] = `
"export function Dupe2() {
  return <div>{"Yellow"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > default name > should support multiple components with same name 3`] = `
"import { Dupe1 } from "@/components/Dupe1";
import { Dupe2 } from "@/components/Dupe2";
export function App() {
  return (
    <>
      <Dupe1 />
      <Dupe2 />
    </>
  );
}
"
`;

exports[`replicate with react fiber > naming > default name > should use default name if component name length < 3 1`] = `
"export function Component1() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should TitleCase component name 1`] = `
"export function ComponentName() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should put component with . in the name in a directory 1`] = `
"export function Div() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should support multiple components with same name 1`] = `
"export function Dupe1() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should support multiple components with same name 2`] = `
"export function Dupe2() {
  return <div>{"Yellow"}</div>;
}
"
`;

exports[`replicate with react fiber > naming > should support multiple components with same name 3`] = `
"import { Dupe1 } from "@/components/Dupe1";
import { Dupe2 } from "@/components/Dupe2";
export function App() {
  return (
    <>
      <Dupe1 />
      <Dupe2 />
    </>
  );
}
"
`;

exports[`replicate with react fiber > naming > should use default name if component name length < 3 1`] = `
"export function Component1() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > props > children > should escape weird JS property names 1`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return (
    <Comp
      style={{
        "--color": "red",
      }}
      obj={{
        ":::wow what a key--?? ": 123,
      }}
    />
  );
}
"
`;

exports[`replicate with react fiber > props > children > should recreate react element children 1`] = `
"import { CompA } from "@/components/CompA";
import { CompB } from "@/components/CompB";
export function App() {
  return (
    <CompA>
      <CompB>
        <div>{"Hello"}</div>
      </CompB>
    </CompA>
  );
}
"
`;

exports[`replicate with react fiber > props > children > should recreate react fragment children 1`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return (
    <Comp>
      <>
        <div>{"Hello"}</div>
        <div>{"World"}</div>
      </>
    </Comp>
  );
}
"
`;

exports[`replicate with react fiber > props > processor dependency ordering > should not get stuck if core component creates what looks like circular deps 1`] = `
"export function Common() {
  return (
    <div role="common">
      <div role="common">{"child"}</div>
    </div>
  );
}
"
`;

exports[`replicate with react fiber > props > processor dependency ordering > should not get stuck if core component creates what looks like circular deps 2`] = `
"import { Common } from "@/components/Common";
export function Child() {
  return <Common>{"child"}</Common>;
}
"
`;

exports[`replicate with react fiber > props > processor dependency ordering > should not get stuck if core component creates what looks like circular deps 3`] = `
"import { Common } from "@/components/Common";
import { Child } from "@/components/Child";
export function Parent() {
  return (
    <div>
      <Common>
        <Child />
      </Common>
    </div>
  );
}
"
`;

exports[`replicate with react fiber > props > processor dependency ordering > should not get stuck if core component creates what looks like circular deps 4`] = `
"import { Parent } from "@/components/Parent";
export function App() {
  return <Parent />;
}
"
`;

exports[`replicate with react fiber > props > should convert tabIndex to number 1`] = `
"export function App() {
  return <div tabIndex={1} />;
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 1`] = `
"export function Common() {
  return (
    <div role="common">
      <div role="common">{"child"}</div>
    </div>
  );
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 2`] = `
"import { Common } from "@/components/Common";
export function Child() {
  return <Common>{"child"}</Common>;
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 3`] = `
"import { Common } from "@/components/Common";
import { Child } from "@/components/Child";
export function Parent() {
  return (
    <div>
      <Common>
        <Child />
      </Common>
    </div>
  );
}
"
`;

exports[`replicate with react fiber > props > should not get stuck if core component creates what looks like circular deps 4`] = `
"import { Parent } from "@/components/Parent";
export function App() {
  return <Parent />;
}
"
`;

exports[`replicate with react fiber > props > should recreate children that are react elements 1`] = `
"import { CompA } from "@/components/CompA";
import { CompB } from "@/components/CompB";
export function App() {
  return (
    <CompA>
      <CompB>
        <div>{"Hello"}</div>
      </CompB>
    </CompA>
  );
}
"
`;

exports[`replicate with react fiber > props > should render JSX in props correctly 1`] = `
"export function Comp() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > props > should render JSX in props correctly 2`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return (
    <Comp
      prop={{
        key: {
          fragment: (
            <>
              <div>{"world"}</div>
            </>
          ),
        },
      }}
    />
  );
}
"
`;

exports[`replicate with react fiber > props > simple props are defined in call site 1`] = `
"export function Comp() {
  return <div />;
}
"
`;

exports[`replicate with react fiber > props > simple props are defined in call site 2`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return (
    <Comp
      enabled
      string="text"
      number={-1}
      array={[1, 2, 3]}
      object={{
        a: 1,
        b: 2,
      }}
    />
  );
}
"
`;

exports[`replicate with react fiber > should allow the same component to be nested multiple times 1`] = `
"export function Row() {
  return (
    <div>
      <div>{"hello"}</div>
      <div>{"world"}</div>
      <div>{"!"}</div>
    </div>
  );
}
"
`;

exports[`replicate with react fiber > should allow the same component to be nested multiple times 2`] = `
"import { Row } from "@/components/Row";
export function App() {
  return (
    <Row>
      <Row>{"hello"}</Row>
      <Row>{"world"}</Row>
      <Row>{"!"}</Row>
    </Row>
  );
}
"
`;

exports[`replicate with react fiber > should create App.tsx 1`] = `
"export function App() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create a component 1`] = `
"export function Comp() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create a component 2`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return <Comp />;
}
"
`;

exports[`replicate with react fiber > should create component when one instance returns null and another returns jsx 1`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return <Comp enabled />;
}
"
`;

exports[`replicate with react fiber > should create component when one instance returns null and another returns jsx 2`] = `
"export function Comp() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create nested components 1`] = `
"export function CompA() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should create nested components 2`] = `
"import { CompA } from "@/components/CompA";
export function CompB() {
  return (
    <div>
      <CompA />
    </div>
  );
}
"
`;

exports[`replicate with react fiber > should create nested components 3`] = `
"import { CompB } from "@/components/CompB";
export function App() {
  return <CompB />;
}
"
`;

exports[`replicate with react fiber > should not create a component when returning null 1`] = `
"export function App() {
  return <div />;
}
"
`;

exports[`replicate with react fiber > should only create one component for memo(forwardRef(function)) 1`] = `
"export function Comp() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should only create one component for memo(forwardRef(function)) 2`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return <Comp />;
}
"
`;

exports[`replicate with react fiber > should only create one component if renders same component multiple times 1`] = `
"export function CompA() {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate with react fiber > should only create one component if renders same component multiple times 2`] = `
"import { CompA } from "@/components/CompA";
export function App() {
  return (
    <>
      <CompA />
      <CompA />
    </>
  );
}
"
`;

exports[`replicate with react fiber > should support inline functions 1`] = `
"export function Comp() {
  return (
    <>
      <div>{"1"}</div>
      <div>{"2"}</div>
      <div>{"3"}</div>
      <div>{"Hello"}</div>
    </>
  );
}
"
`;

exports[`replicate with react fiber > should support inline functions 2`] = `
"import { Comp } from "@/components/Comp";
export function App() {
  return <Comp />;
}
"
`;
